# gonglib

./: .gitignore  AUTHORS  ChangeLog  README  TODO  acinclude.m4  gestiong.pc.in  gong.sh
capel/src/: Makefile.am  TODO  capelcppmodule.cpp  capelcppmodule.h  capelcssmodule.h  capelmodule.cpp  capelmodule.h  capelphpmodule.cpp  capelphpmodule.h  capelrtkmodule.cpp  capelrtkmodule.h  generalgenerator.cpp  generalgenerator.h  gonggendbmodule.cpp  gonggendbmodule.h  gonggenerators.cpp  gonggenerators.h  gonggenfrmeditbehavior.cpp  gonggenfrmeditrecmaestro.cpp  gonggenfrmeditrecmaestro.h  gonggenrecords.cpp  gonggenrecords.h  gonglib_inc.cpp  gonglib_inc.h  main.cpp  rtkcppclass.cpp  rtkserver.cpp
gestiong/: ChangeLog  INSTALL  Makefile.am  Makefile.cvs  README  acinclude.m4  configure.ac  gestiong.kdev4  gong.sh  httpserver  m4  user
gestiong/capel/: Makefile.cvs  capel.kdev4
gestiong/debian/: TODO  changelog  control  copyright
gestiong/gestiong/: Makefile.am  configure.ac
gestiong/po/: ChangeLog  LINGUAS  Makefile.in.in  Makevars  POTFILES.in  ca.po  en.po  es.po  eu.po  fr.po  gl.po  gonglib.pot
gestiong/src/: Makefile.am  gestiongmastertable.h  gestiongmodule.cpp  gestiongmodule.h  main.cpp  main_empresasg.cpp  main_integralg.cpp
gestiong/tests/: Makefile.cvs  configure.ac
gonglibcapel/: Doxyfile  Makefile.am  configure.ac  gonglibcapel.kdev4
gonglibcapel/src/: Makefile.am  capelcppmodule.cpp  capelmodule.cpp  capelphpmodule.cpp  capelphpmodule.h  gonggendbmodule.h  gonggenerators.h  gonggenfrmeditbehavior.cpp  gonggenfrmeditbehavior.h  gonggenfrmeditrecmaestro.cpp  gonggenfrmeditrecmaestro.h  gonggenrecords.cpp  gonggenrecords.h  rtkcppclass.cpp
mod/contab/: Makefile.am  contabcuenta.h  contabfldcuenta.cpp  contabfldcuenta.h  contabfrmeditapunte.cpp  contabfrmeditapunte.h  contabfrmeditasiento.cpp  contabfrmeditasiento.h  contabfrmeditcuenta.cpp  contabfrmeditcuenta.h  contabfrmeditempresa.cpp  contabfrmeditempresa.h  contabfrmeditempresabehavior.cpp  contabfrmeditempresabehavior.h  contabfrmedittipoivabehavior.cpp  contabfrmedittipoivabehavior.h  contabfrmherramientas.cpp  contabiasentablerecord.cpp  contabiasentablerecord.h  contabmastertable.h  contabmodule.cpp  contabmodule.h  contabrecapunte.cpp  contabrecapunte.h  contabrecasiento.cpp  contabrecasiento.h  contabreccontrapartida.h  contabreccuenta.cpp  contabreccuenta.h  contabrectipoiva.cpp  contabrectipoiva.h  contabvalidatecuenta.inc
mod/contactos/: Makefile.am  contactosfldcif.cpp  contactosfldcif.h  contactosfldnombrepropio.cpp  contactosfldnombrepropio.h  contactosfrmeditcontacto.cpp  contactosfrmeditcontacto.h  contactosfrmeditcontactobehavior.cpp  contactosfrmeditcontactobehavior.h  contactosfrmmailing.cpp  contactosfrmmailing.h  contactosicontactablerecord.cpp  contactosicontactablerecord.h  contactosmastertable.h  contactosmodule.cpp  contactosmodule.h  contactosreccontacto.cpp  contactosreccontacto.h  contactossmtpmailsender.cpp  contactossmtpmailsender.h
mod/dbapp/: Makefile.am  dbappdaterangebox.cpp  dbappdaterangebox.h  dbappdbapplication.cpp  dbappdbapplication.h  dbappdbmodule.cpp  dbappdbmodule.h  dbappdbtablesmodel.cpp  dbappdbtablesmodel.h  dbappfldstringautoinc.cpp  dbappfldstringautoinc.h  dbappfrmabout.cpp  dbappfrmabout.h  dbappfrmadvancedprint.cpp  dbappfrmadvancedprint.h  dbappfrmcalculator.cpp  dbappfrmcalculator.h  dbappfrmcsvparams.cpp  dbappfrmcsvparams.h  dbappfrmcustom.cpp  dbappfrmcustom.h  dbappfrmcustom.ui  dbappfrmdatabasetools.cpp  dbappfrmeditnameslisttable.cpp  dbappfrmeditnameslisttable.h  dbappfrmeditrec.cpp  dbappfrmeditrec.h  dbappfrmeditrecbehavior.cpp  dbappfrmeditrecdetail.cpp  dbappfrmeditrecmaster.cpp  dbappfrmeditrecmaster.h  dbappfrmexport.cpp  dbappfrmexport_gui.cpp  dbappfrmimport.cpp  dbappfrmimport_gui.cpp  dbappfrmintegrity.cpp  dbappfrmintegrity.h  dbappfrmlogin.cpp  dbappfrmlogin.h  dbappfrmlogin_gui.cpp  (+48 more)
mod/deposit/: Makefile.am  depositfrmeditliquidacioncompra.cpp  depositfrmeditliquidacioncompra.h  depositfrmeditliquidacioncompradet.cpp  depositfrmeditliquidacioncompradet.h  depositfrmeditliquidacionventa.cpp  depositfrmeditliquidacionventa.h  depositfrmeditliquidacionventadet.cpp  depositfrmeditliquidacionventadet.h  depositfrmedittipodocbehavior.cpp  depositfrmedittipodocbehavior.h  depositfrmeditventadetbehavior.cpp  depositfrmeditventadetbehavior.h  depositfrmestadcompraventa.cpp  depositfrmestadcompraventa.h  depositfrmfactliqventa.cpp  depositfrmfactliqventa.h  depositfrmgenliqcompra.cpp  depositfrmgenliqcompra.h  depositfrmliquidardepositos.cpp  depositfrmliquidardepositos.h  depositmastertable.h  depositmodule.cpp  depositmodule.h  depositrecliquidacioncompra.cpp  depositrecliquidacioncompra.h  depositrecliquidacioncompradet.cpp  depositrecliquidacioncompradet.h  depositrecliquidacionventa.cpp  depositrecliquidacionventa.h  depositrecliquidacionventadet.cpp  depositrecliquidacionventadet.h
mod/ecotienda/: Makefile.am  ecotiendafrmeditarticulobehavior.cpp  ecotiendafrmeditarticulobehavior.h  ecotiendamastertable.h  ecotiendamodule.cpp  ecotiendamodule.h
mod/editorial/: Makefile.am  editorialfldisbn.cpp  editorialfldisbn.h  editorialfrmediteditorial.cpp  editorialfrmediteditorial.h  editorialfrmeditfamiliabehavior.cpp  editorialfrmeditfamiliabehavior.h  editorialfrmeditlibro.cpp  editorialfrmeditlibro.h  editorialisbnsearch.cpp  editorialisbnsearch.h  editorialmodule.cpp  editorialmodule.h  editorialreceditorial.cpp  editorialreceditorial.h  editorialreclibro.cpp  editorialreclibro.h
mod/empresa/: Makefile.am  empresafldcuentabanco.cpp  empresafldcuentabanco.h  empresafldejercicio.cpp  empresafldejercicio.h  empresafldempresaid.cpp  empresafldempresaid.h  empresafldperiodicidad.cpp  empresafldperiodicidad.h  empresafrmeditdepartamento.cpp  empresafrmeditdepartamento.h  empresafrmeditempresa.cpp  empresafrmeditempresa.h  empresafrmeditmoneda.cpp  empresafrmeditmoneda.h  empresafrmeditproyecto.cpp  empresafrmeditproyecto.h  empresafrmedittipoiva.cpp  (+13 more)
tests/: AUTHORS  Makefile.am  configure.ac  gong-tests.kdev4  tests.kdev4
(+1244 files in other folders)
